"Reset Curve" is backwards on Custom Falloff Curves (Lights) #40885

Closed
opened 2014-06-30 07:06:08 +02:00 by Wayne Dixon · 9 comments

System Information
Mac OSX 10.9 - Nvidia GTX GeForce 470

Blender Version
Broken: 2.71
Worked: (optional)

Short description of error
If you add a custom falloff curve to any light and then "Reset Curve" it will reset the curve to the wrong direction
ie. from 0 to 1 (rather than 1 to 0)

Exact steps for others to reproduce the error
New Scene
Select Lamp (or add new lamp)
change falloff type to Custom
Open "Falloff Curve" tab
click "Reset Curve"
(the curve will then flip to the wrong direction)

**System Information** Mac OSX 10.9 - Nvidia GTX GeForce 470 **Blender Version** Broken: 2.71 Worked: (optional) **Short description of error** If you add a custom falloff curve to any light and then "Reset Curve" it will reset the curve to the wrong direction ie. from 0 to 1 (rather than 1 to 0) **Exact steps for others to reproduce the error** New Scene Select Lamp (or add new lamp) change falloff type to Custom Open "Falloff Curve" tab click "Reset Curve" (the curve will then flip to the wrong direction)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @WayneDixon

Added subscriber: @WayneDixon

Added subscriber: @mont29

Added subscriber: @mont29

This is not really a bug, curve tools are usage-agnostic (i.e. they can’t be customized for specific special cases).

This is not really a bug, curve tools are usage-agnostic (i.e. they can’t be customized for specific special cases).
Bastien Montagne self-assigned this 2014-06-30 16:13:44 +02:00

Grr, cancel previous comment, can be fixed actually, commit is imminent! :)

Grr, cancel previous comment, can be fixed actually, commit is imminent! :)

This issue was referenced by 2e64b8354b

This issue was referenced by 2e64b8354bc68c22a0051cbb65937098b537cd65

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2e64b8354b.

Closed by commit 2e64b8354b.
Author

Nice one :)

Nice one :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40885
No description provided.