Fix T40885: "Reset Curve" is backwards on Custom Falloff Curves (Lights).

Add ability to define negative slope by default to curvemapping template...